--- a/web-app/package.json
+++ b/web-app/package.json
@@ -16,6 +16,7 @@
     "redis": "^4.5.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-cli-plugin-vuetify-preset-rally": "^1.0.4",
     "vuetify": "^2.6.0",
     "ws": "^8.11.0"
   },
