--- a/web-app/package.json
+++ b/web-app/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "dns": "^0.2.2",
+    "firebase": "^9.15.0",
     "ioredis": "^5.2.4",
     "node-sass": "^8.0.0",
     "nodemon": "^2.0.20",
@@ -32,7 +33,7 @@
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
     "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
+    "sass-loader": "^7.1.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.0"
